package com.aghajari.videosharing.utils

const val TEST_TAG_TEXT_FIELD = "TextField"
const val TEST_TAG_FLOAT_BUTTON = "FloatButton"
const val TEST_TAG_KEYBOARD = "Keyboard"
const val TEST_TAG_CODE_ROW = "CodeRow"