...
        modifier = Modifier
            .fillMaxSize()
            .padding(vertical = 56.dp)
    ) {
        Space(size = 124.dp)
        Text(
            text = "Check your email address",
            color = MaterialTheme.colorScheme.onPrimary,
            style = MaterialTheme.typography.titleLarge
        )
        Space(size = 18.dp)
        Text(
            text = buildAnnotatedString {
...
